--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@
 
 * {
     margin: 0;
+    padding: 0;
 }
 
 html, body {
@@ -30,4 +31,8 @@ input, button, textarea, select {
 
 p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
+}
+
+#body {
+    background: rgb(248,240,227);
 }
