Add comment in css to signify end of css reset

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,6 +33,10 @@ p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
 }
 
+/****************
+    END Css Reset
+*****************/
+
 #body {
     background: rgb(248,240,227);
 }
